--- a/src/components/popup/popupStyle.scss
+++ b/src/components/popup/popupStyle.scss
@@ -1,17 +1,16 @@
 .modalBackground {
-    width: 100vw;
-    height: 100vh;
-    // background-color: rgba(200, 200, 200);
-    position: fixed;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0;
 }
 
 .modalContainer {
-    width: 500px;
-    height: 500px;
+
+
+    width: 720px;
+    height: 543px;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -24,11 +23,51 @@
     display: inline-block;
     text-align: center;
     margin-top: 10px;
+
+
+}
+
+.modalContainer .title h1 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 64px;
+    line-height: 77px;
+
+    color: #000000;
+}
+
+
+.modalContainer .description {
+    display: flex;
+    justify-content: center;
+}
+
+.modalContainer .description p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+
+    color: #000000;
+    width: 312px;
+    height: 48px;
 }
 
 .titleCloseBtn {
     display: flex;
     justify-content: flex-end;
+
+}
+
+.titleCloseBtn span {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #639105;
+    cursor: pointer;
 }
 
 .titleCloseBtn button {
@@ -36,6 +75,7 @@
     border: none;
     font-size: 25px;
     cursor: pointer;
+
 }
 
 .modalContainer .modalContent {
