--- a/src/components/popup/popupStyle.scss
+++ b/src/components/popup/popupStyle.scss
@@ -10,7 +10,7 @@
 
 
     width: 720px;
-    height: 543px;
+    // height: 543px;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
